--- a/mail/package.json
+++ b/mail/package.json
@@ -1,7 +1,186 @@
 {
+  "name": "mail",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "ansi-align": "^3.0.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "array-flatten": "^1.1.1",
+    "binary-extensions": "^2.2.0",
+    "balanced-match": "^1.0.2",
+    "body-parser": "^1.20.0",
+    "boxen": "^5.1.2",
+    "brace-expansion": "^1.1.11",
+    "cacheable-request": "^6.1.0",
+    "braces": "^3.0.2",
+    "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "cli-boxes": "^2.2.1",
+    "ci-info": "^2.0.0",
+    "clone-response": "^1.0.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "content-disposition": "^0.5.4",
+    "bytes": "^3.1.2",
+    "cookie": "^0.5.0",
+    "content-type": "^1.0.4",
+    "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^2.6.9",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "depd": "^2.0.0",
+    "dot-prop": "^5.3.0",
+    "duplexer3": "^0.1.4",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "base64id": "^2.0.0",
+    "engine.io": "^6.2.0",
+    "engine.io-parser": "^5.0.4",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "call-bind": "^1.0.2",
     "express": "^4.18.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "destroy": "^1.2.0",
+    "fresh": "^0.5.2",
+    "forwarded": "^0.2.0",
+    "etag": "^1.8.1",
+    "get-stream": "^4.1.0",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^3.0.0",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.10",
+    "ee-first": "^1.1.1",
+    "function-bind": "^1.1.1",
+    "http-cache-semantics": "^4.1.0",
+    "has-yarn": "^2.1.0",
+    "http-errors": "^2.0.0",
+    "has-flag": "^3.0.0",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "has": "^1.0.3",
+    "imurmurhash": "^0.1.4",
+    "ini": "^2.0.0",
+    "get-intrinsic": "^1.1.1",
+    "is-binary-path": "^2.1.0",
+    "has-symbols": "^1.0.3",
+    "is-ci": "^2.0.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-fullwidth-code-point": "^3.0.0",
+    "inherits": "^2.0.4",
+    "is-installed-globally": "^0.4.0",
+    "is-npm": "^5.0.0",
+    "is-number": "^7.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-obj": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "latest-version": "^5.1.0",
+    "json-buffer": "^3.0.0",
+    "keyv": "^3.1.0",
+    "lru-cache": "^6.0.0",
+    "lowercase-keys": "^1.0.1",
+    "merge-descriptors": "^1.0.1",
+    "make-dir": "^3.1.0",
+    "methods": "^1.1.2",
+    "iconv-lite": "^0.4.24",
+    "mime": "^1.6.0",
+    "ipaddr.js": "^1.9.1",
+    "minimatch": "^3.1.2",
+    "mimic-response": "^1.0.1",
+    "minimist": "^1.2.6",
     "nodemailer": "^6.7.5",
-    "socket.io": "^4.5.1"
-  }
+    "mime-db": "^1.52.0",
+    "nodemon": "^2.0.16",
+    "media-typer": "^0.3.0",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "mime-types": "^2.1.35",
+    "p-cancelable": "^1.1.0",
+    "once": "^1.4.0",
+    "object-inspect": "^1.12.0",
+    "on-finished": "^2.4.1",
+    "package-json": "^6.5.0",
+    "picomatch": "^2.3.1",
+    "parseurl": "^1.3.3",
+    "prepend-http": "^2.0.0",
+    "pstree.remy": "^1.1.8",
+    "proxy-addr": "^2.0.7",
+    "pump": "^3.0.0",
+    "ms": "^2.0.0",
+    "qs": "^6.10.3",
+    "pupa": "^2.1.1",
+    "range-parser": "^1.2.1",
+    "rc": "^1.2.8",
+    "readdirp": "^3.6.0",
+    "object-assign": "^4.1.1",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "safe-buffer": "^5.2.1",
+    "responselike": "^1.0.2",
+    "semver": "^5.7.1",
+    "semver-diff": "^3.1.1",
+    "send": "^0.18.0",
+    "negotiator": "^0.6.3",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "socket.io": "^4.5.1",
+    "signal-exit": "^3.0.7",
+    "socket.io-adapter": "^2.4.0",
+    "socket.io-parser": "^4.0.4",
+    "statuses": "^2.0.1",
+    "path-to-regexp": "^0.1.7",
+    "string-width": "^4.2.3",
+    "supports-color": "^5.5.0",
+    "strip-json-comments": "^2.0.1",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "raw-body": "^2.5.1",
+    "touch": "^3.1.0",
+    "type-is": "^1.6.18",
+    "type-fest": "^0.20.2",
+    "safer-buffer": "^2.1.2",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.5",
+    "unique-string": "^2.0.0",
+    "url-parse-lax": "^3.0.0",
+    "update-notifier": "^5.1.0",
+    "utils-merge": "^1.0.1",
+    "side-channel": "^1.0.4",
+    "vary": "^1.1.2",
+    "widest-line": "^3.1.0",
+    "wrappy": "^1.0.2",
+    "strip-ansi": "^6.0.1",
+    "wrap-ansi": "^7.0.0",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "toidentifier": "^1.0.1",
+    "unpipe": "^1.0.0",
+    "yallist": "^4.0.0",
+    "ws": "^8.2.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
